Add Domain entities

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+.idea/.idea.DriverInformationSystemBackend/.idea/vcs.xml
+.idea/.idea.DriverInformationSystemBackend/.idea/indexLayout.xml
