--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Mongodb": "mongodb://root:pass12345@localhost:27017/DIS_Debug?authSource=admin&connectTimeoutMS=3000"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
