--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,12 +11,12 @@
       <PackageReference Include="CSharpFunctionalExtensions" Version="2.40.2" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.7.1" />
       <PackageReference Include="MediatR" Version="12.1.1" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Features\" />
-      <Folder Include="Infrastructure\Persistence\MongoDb\" />
     </ItemGroup>
 
     <ItemGroup>
