--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,9 +1,14 @@
 {
+  "ConnectionStrings": {
+    "Mongodb": "mongodb://root:pass12345@localhost:27017/DIS_Production?authSource=admin&connectTimeoutMS=3000"
+  },
+  
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  
   "AllowedHosts": "*"
 }
