Add external class CreateTrainValidator

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -16,17 +16,14 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Reference Include="Microsoft.AspNetCore.Http.Abstractions">
-        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.2\Microsoft.AspNetCore.Http.Abstractions.dll</HintPath>
-      </Reference>
-      <Reference Include="Microsoft.AspNetCore.Mvc.Core">
-        <HintPath>C:\Program Files\dotnet\shared\Microsoft.AspNetCore.App\7.0.2\Microsoft.AspNetCore.Mvc.Core.dll</HintPath>
-      </Reference>
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
-
-
-
-
-
+    
+    <ItemGroup>
+      <Folder Include="Features\RouteList\CreateCommand\" />
+      <Folder Include="Features\RouteList\DeleteCommand\" />
+      <Folder Include="Features\RouteList\GetItemQuery\" />
+      <Folder Include="Features\RouteList\GetListQuery\" />
+    </ItemGroup>
 
 </Project>
