--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Mongodb": "mongodb://root:pass12345@localhost:27017/DIS_Production?authSource=admin&connectTimeoutMS=3000"
+    "Mongodb": "mongodb://root:pass12345@mongodb:27017/DIS_Production?authSource=admin&connectTimeoutMS=3000"
   },
   
   "Logging": {
