--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -2,11 +2,17 @@
   "ConnectionStrings": {
     "Mongodb": "mongodb://root:pass12345@mongodb:27017/DIS_Production?authSource=admin&connectTimeoutMS=3000"
   },
-  
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+
+  "Serilog": {
+    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      { "Name": "Console" },
+      { "Name": "File", "Args": { "path": "Logs/log.txt" } }
+    ],
+    "Enrich": [ "FromLogContext" ],
+    "Properties": {
+      "Application": "Sample"
     }
   },
   
