--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -1,18 +1,16 @@
 {
   "ConnectionStrings": {
-    "Mongodb": "mongodb://root:pass12345@mongodb:27017/DIS_Production?authSource=admin&connectTimeoutMS=3000"
+    "Mongodb": "mongodb://root:pass12345@localhost:27017/DIS_Debug?authSource=admin&connectTimeoutMS=1000"
   },
 
-  "Serilog": {
-    "Using":  [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-    "MinimumLevel": "Information",
-    "WriteTo": [
-      { "Name": "Console" },
-      { "Name": "File", "Args": { "path": "Logs/log.txt" } }
-    ],
-    "Enrich": [ "FromLogContext" ],
-    "Properties": {
-      "Application": "Sample"
+  "Logger": {
+    "fileSinkSetting": {
+      "enable": true
+    },
+    "seqSinkSetting": {
+      "enable": false,
+      "apiKey": "yeEZyL3SMcxEKUijBjN",
+      "uri" : "http://localhost:5341"
     }
   },
   
