--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 ﻿services:
   webapi:
     image: dis_backend
+    ports:
+      - "8222:80"
     build:
       context: .
-      dockerfile: WebApi/Dockerfile   
+      dockerfile: WebApi/Dockerfile
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
+      - DbConnection=mongodb://root:pass12345@mongodb:27017/DIS_Production?authSource=admin&connectTimeoutMS=1000
+      - 'LoggerSetting= {"fileSinkSetting": {"enable": false}, "seqSinkSetting": {"enable": false, "apiKey": "yeEZyL3SMcxEKUijBjN", "uri": "http://seq:5341"}}'
     networks:
       - mongodb_network 
         
