--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -23,10 +23,9 @@
     
     <ItemGroup>
       <Folder Include="Features\Persones\GetItemQuery\" />
-      <Folder Include="Features\RouteList\CreateCommand\" />
-      <Folder Include="Features\RouteList\DeleteCommand\" />
-      <Folder Include="Features\RouteList\GetItemQuery\" />
-      <Folder Include="Features\RouteList\GetListQuery\" />
+      <Folder Include="Features\RouteMetroList\DeleteCommand\" />
+      <Folder Include="Features\RouteMetroList\GetItemQuery\" />
+      <Folder Include="Features\RouteMetroList\GetListQuery\" />
     </ItemGroup>
 
 </Project>
