--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -13,6 +13,7 @@
       <PackageReference Include="MediatR" Version="12.1.1" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
       <PackageReference Include="MongoDB.Driver" Version="2.21.0" />
+      <PackageReference Include="MongoDBMigrations" Version="2.2.0" />
       <PackageReference Include="Serilog" Version="3.0.1" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.15.1" />
     </ItemGroup>
